fix wrapping on very small screens

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ pre {
   font-size: inherit;
   padding: inherit;
   line-height: 1.1em;
+  white-space: pre-wrap;
 }
 
 #wrapper {
